--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -29,12 +29,19 @@
         "*  The user should be able to provide his/her Skin Issues, such as acne, dryness, wrinkles, or hyperpigmentation.\n",
         "*  The user should be able to provide their Skin Type, whether it's oily, dry, combination, or sensitive.\n",
         "*   The user should be able to specify a Preferred Price Range, such as budget-friendly, mid-range, or luxury.\n",
+        "*  The user shall be able to provide product type wanted (eg. Moisturizer, Serum, Toner).\n",
+        "\n",
+        "\n",
+        "\n",
         "<hr>\n",
+        "\n",
         "*   The system should be able to recommend a Product Name.\n",
         "*   The system should be able to display the Price of the recommended product.\n",
         "*   The system should be able to provide the Brand Name.\n",
         "*   The system should be able to display a photo of the product, if available.\n",
         "*   The system should be able to describe how the product will address the user's specific skin concerns.\n",
+        "*   The system shall be anle to provide product type (eg. Moisturizer, Serum, Toner).\n",
+        "\n",
         "<br><br>"
       ]
     },
@@ -63,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
       "metadata": {
         "id": "e32aff8e-515d-48b9-a45f-95694e8273ba",
@@ -155,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "6a6daa3b",
       "metadata": {
         "id": "6a6daa3b",
@@ -364,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "96c3ad3f",
       "metadata": {
         "id": "96c3ad3f",
@@ -408,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "e194b823",
       "metadata": {
         "id": "e194b823",
@@ -564,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "39660e6b",
       "metadata": {
         "id": "39660e6b",
@@ -634,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "e65c72c2",
       "metadata": {
         "id": "e65c72c2",
@@ -669,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "125db057",
       "metadata": {
         "id": "125db057",
@@ -708,7 +715,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "ab266e04",
       "metadata": {
         "id": "ab266e04"
@@ -731,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "d87a463b",
       "metadata": {
         "id": "d87a463b",
@@ -771,9 +778,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "8ee905ab",
-      "metadata": {},
+      "metadata": {
+        "id": "8ee905ab",
+        "outputId": "c02d5227-7b66-46f4-f963-acc4457534b4"
+      },
       "outputs": [
         {
           "data": {
@@ -794,9 +804,9 @@
         "\n",
         "\n",
         "sns.countplot(\n",
-        "    y=df['brand'], \n",
+        "    y=df['brand'],\n",
         "    order=top_brands,\n",
-        "    color=\"#4CAF50\",  \n",
+        "    color=\"#4CAF50\",\n",
         "    edgecolor=\"black\"\n",
         ")\n",
         "\n",
@@ -814,7 +824,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "1616a444",
       "metadata": {
         "id": "1616a444",
@@ -886,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "2188b2de",
       "metadata": {
         "id": "2188b2de",
@@ -943,7 +953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "id": "bb5eb0b4",
       "metadata": {
         "id": "bb5eb0b4",
@@ -997,7 +1007,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "id": "1cb60fe5",
       "metadata": {
         "id": "1cb60fe5"
