--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -26,21 +26,21 @@
         "Functional requirement :\n",
         "\n",
         "\n",
-        "*  The user should be able to provide his/her Skin Issues, such as acne, dryness, wrinkles, or hyperpigmentation.\n",
-        "*  The user should be able to provide their Skin Type, whether it's oily, dry, combination, or sensitive.\n",
-        "*   The user should be able to specify a Preferred Price Range, such as budget-friendly, mid-range, or luxury.\n",
-        "*  The user shall be able to provide product type wanted (eg. Moisturizer, Serum, Toner).\n",
         "\n",
+        "*   The user shall be able to provide product type wanted (eg. Moisturizer, Serum, Toner).\n",
+        "*  The user should be able to provide his/her skin issues, such as acne, dryness, wrinkles, or hyperpigmentation.\n",
+        "*  The user should be able to provide their skin type, whether it's oily, dry, combination, or sensitive.\n",
+        "*   The user should be able to specify a preferred price range, such as budget-friendly, mid-range, or luxury.\n",
         "\n",
         "\n",
         "<hr>\n",
         "\n",
-        "*   The system should be able to recommend a Product Name.\n",
-        "*   The system should be able to display the Price of the recommended product.\n",
-        "*   The system should be able to provide the Brand Name.\n",
-        "*   The system should be able to display a photo of the product, if available.\n",
+        "*   The system should be able to recommend a product name.\n",
         "*   The system should be able to describe how the product will address the user's specific skin concerns.\n",
-        "*   The system shall be anle to provide product type (eg. Moisturizer, Serum, Toner).\n",
+        "*   The system should be able to display the price of the recommended product.\n",
+        "*   The system should be able to display a photo of the product, if available.\n",
+        "*   The system should be able to provide product URL link, if available.\n",
+        "\n",
         "\n",
         "<br><br>"
       ]
