--- a/Glowlytic (2).ipynb
+++ b/Glowlytic (2).ipynb
@@ -27,7 +27,7 @@
         "\n",
         "\n",
         "\n",
-        "*   The user shall be able to provide product type wanted (eg. Moisturizer, Serum, Toner).\n",
+        "*   The user should be able to provide product type wanted (eg. Moisturizer, Serum, Toner).\n",
         "*  The user should be able to provide his/her skin issues, such as acne, dryness, wrinkles, or hyperpigmentation.\n",
         "*  The user should be able to provide their skin type, whether it's oily, dry, combination, or sensitive.\n",
         "*   The user should be able to specify a preferred price range, such as budget-friendly, mid-range, or luxury.\n",
