--- a/RFd.ipynb
+++ b/RFd.ipynb
@@ -20,12 +20,25 @@
     "import warnings\n",
     "\n",
     "# Load the dataset\n",
-    "dataset = pd.read_csv(\"C:\\Users\\dalow\\Downloads\\processed_file.csv\")\n",
+    "df = pd.read_csv(\"C:\\Users\\dalow\\Downloads\\processed_file.csv\")\n",
     "\n",
+    "# Define features (X) and target (y)\n",
+    "X = df.drop(columns=['labels'])  # Features: skin type, price, and notable effects\n",
+    "y = df['labels']  # Target: Product category labels\n",
     "\n",
+    "# Split dataset into training (80%) and testing (20%)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "y_pred = model.predict(X_test)\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))"
+    "# Train Random Forest model\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on test set\n",
+    "y_pred = rf_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model accuracy\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Random Forest Model Accuracy: {accuracy:.2%}\")\n"
    ]
   }
  ],
