--- a/RFd.ipynb
+++ b/RFd.ipynb
@@ -9,21 +9,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Model Accuracy: 88.84%\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"['brand', 'product_type'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m recommended_products[text_columns]\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# Example usage (for the test set predictions)\u001b[39;00m\n\u001b[1;32m---> 52\u001b[0m recommended \u001b[38;5;241m=\u001b[39m \u001b[43mrecommend_products\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtext_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28mprint\u001b[39m(recommended\u001b[38;5;241m.\u001b[39mhead())\n",
+      "Cell \u001b[1;32mIn[9], line 49\u001b[0m, in \u001b[0;36mrecommend_products\u001b[1;34m(predictions, df, text_data)\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrecommend_products\u001b[39m(predictions, df, text_data):\n\u001b[0;32m     48\u001b[0m     recommended_products \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabels\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(predictions)]\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 49\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mrecommended_products\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtext_columns\u001b[49m\u001b[43m]\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\dalow\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4106\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   4107\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[1;32m-> 4108\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m   4110\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   4111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\dalow\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6200\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[0;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\dalow\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6252\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6249\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   6251\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m-> 6252\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['brand', 'product_type'] not in index\""
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "import warnings\n",
+    "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
     "\n",
     "# Load the dataset\n",
-    "df = pd.read_csv(\"C:\\Users\\dalow\\Downloads\\processed_file.csv\")\n",
+    "df = pd.read_csv(\"Dataset/processed_file.csv\")\n",
+    "# Store text-based columns separately for recommendations\n",
+    "text_columns = ['product_name', 'brand', 'product_type', 'description', 'product_href', 'picture_src']\n",
+    "text_data = df[text_columns]\n",
+    "# Ignore warnings from OneHotEncoder\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "# Encode categorical variables\n",
+    "encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
     "\n",
-    "# Define features (X) and target (y)\n",
-    "X = df.drop(columns=['labels'])  # Features: skin type, price, and notable effects\n",
+    "categorical_cols = ['product_type', 'brand', 'notable_effects']\n",
+    "encoded_features = pd.DataFrame(encoder.fit_transform(df[categorical_cols]))\n",
+    "encoded_features.columns = encoder.get_feature_names_out(categorical_cols)\n",
+    "\n",
+    "# Label encode skintype if it exists\n",
+    "df['skintype'] = LabelEncoder().fit_transform(df['skintype']) if 'skintype' in df else df['skintype']\n",
+    "\n",
+    "# Merge encoded features back to the dataset\n",
+    "df = df.drop(columns=categorical_cols).join(encoded_features)\n",
+    "\n",
+    "# Define features (X) and target (y), keeping only numeric columns for training\n",
+    "X = df.select_dtypes(include=['number']).drop(columns=['labels'])  # Features: skin type, price, and notable effects\n",
     "y = df['labels']  # Target: Product category labels\n",
     "\n",
     "# Split dataset into training (80%) and testing (20%)\n",
@@ -38,7 +79,16 @@
     "\n",
     "# Evaluate model accuracy\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Random Forest Model Accuracy: {accuracy:.2%}\")\n"
+    "print(f\"Random Forest Model Accuracy: {accuracy:.2%}\")\n",
+    "\n",
+    "# Function to retrieve product recommendations\n",
+    "def recommend_products(predictions, df, text_data):\n",
+    "    recommended_products = df[df['labels'].isin(predictions)].reset_index(drop=True)\n",
+    "    return recommended_products[text_columns]\n",
+    "\n",
+    "# Example usage (for the test set predictions)\n",
+    "recommended = recommend_products(y_pred, df, text_data)\n",
+    "print(recommended.head())\n"
    ]
   }
  ],
@@ -49,7 +99,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.2"
   }
  },
