--- a/RF.ipynb
+++ b/RF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +91,14 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score, confusion_matrix\n",
     "\n",
-    "# ✅ Load the dataset\n",
-    "file_path = \"Dataset/processed_file.csv\"  # Ensure the correct path\n",
+    "# Load the dataset\n",
+    "file_path = \"Dataset/processed_file.csv\" \n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# ✅ Drop rows where 'price' is missing\n",
+    "# Drop rows where 'price' is missing\n",
     "df.dropna(subset=['price_SAR'], inplace=True)\n",
     "\n",
-    "# ✅ Categorize products based on notable effects and product type\n",
+    "# Categorize products based on notable effects and product type\n",
     "def categorize_product(row):\n",
     "    notable_effects = row['notable_effects']\n",
     "    product_type = row['product_type']\n",
@@ -122,7 +122,7 @@
     "    else:\n",
     "        return 'General ' + product_type\n",
     "\n",
-    "# ✅ Apply categorization\n",
+    "# Apply categorization\n",
     "df['product_category'] = df.apply(categorize_product, axis=1)\n",
     "\n",
     "# ✅ Define features and target variable\n",
@@ -135,29 +135,29 @@
     "\n",
     "target = 'product_category'\n",
     "\n",
-    "# ✅ Encode the target variable\n",
+    "# Encode the target variable\n",
     "label_encoder = LabelEncoder()\n",
     "df[target] = label_encoder.fit_transform(df[target])\n",
     "\n",
-    "# ✅ Split dataset into training and testing\n",
+    "# Split dataset into training and testing\n",
     "X = df[features]\n",
     "y = df[target]\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# ✅ Train the Random Forest Model\n",
+    "# Train the Random Forest Model\n",
     "rf_model = RandomForestClassifier(n_estimators=100, max_depth=None, random_state=42)\n",
     "rf_model.fit(X_train, y_train)\n",
     "\n",
-    "# ✅ Make Predictions\n",
+    "# Make Predictions\n",
     "y_pred = rf_model.predict(X_test)\n",
     "\n",
-    "# ✅ Compute evaluation metrics\n",
+    "# Compute evaluation metrics\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "recall = recall_score(y_test, y_pred, average='weighted')\n",
-    "precision = precision_score(y_test, y_pred, average='weighted', zero_division=1)  # Fixed precision issue\n",
+    "precision = precision_score(y_test, y_pred, average='weighted', zero_division=1)\n",
     "f1 = f1_score(y_test, y_pred, average='weighted')\n",
     "\n",
-    "# ✅ Compute specificity properly for multi-class classification\n",
+    "# Compute specificity properly for multi-class classification\n",
     "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "specificities = []\n",
     "\n",
@@ -174,13 +174,13 @@
     "# Compute the mean specificity across all classes\n",
     "specificity = np.mean(specificities)\n",
     "\n",
-    "# ✅ Organize Metrics into a DataFrame\n",
+    "# Organize Metrics into a DataFrame\n",
     "metrics_df = pd.DataFrame({\n",
     "    \"Metric\": [\"Accuracy\", \"Recall\", \"Precision\", \"F1 Score\", \"Specificity\"],\n",
     "    \"Value\": [accuracy, recall, precision, f1, specificity]\n",
     "})\n",
     "\n",
-    "# ✅ Display results\n",
+    "# Display results\n",
     "from IPython.display import display\n",
     "print(\"\\n📊 Model Performance Metrics:\\n\")\n",
     "display(metrics_df)\n"
