--- a/RF.ipynb
+++ b/RF.ipynb
@@ -125,7 +125,7 @@
     "# Apply categorization\n",
     "df['product_category'] = df.apply(categorize_product, axis=1)\n",
     "\n",
-    "# ✅ Define features and target variable\n",
+    "# Define features and target variable\n",
     "features = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal',  # Skin types\n",
     "            'product_type_face wash', 'product_type_moisturizer', 'product_type_serum', 'product_type_sunscreen', 'product_type_toner',  # Product types\n",
     "            'notable_effects_acne-free', 'notable_effects_acne-spot', 'notable_effects_anti-aging', 'notable_effects_balancing',\n",
