--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -4,155 +4,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rain Forest"
+    "SVM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.97\n",
-      "Classification Report:\n",
-      "                                        precision    recall  f1-score   support\n",
+      "✅ Best Parameters Found: {'C': 1, 'kernel': 'rbf'}\n",
+      "🎯 SVM Model Accuracy: 0.56\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          Acne Treatment ['face wash']       1.00      0.90      0.95        10\n",
-      "        Acne Treatment ['moisturizer']       1.00      1.00      1.00         5\n",
-      "              Acne Treatment ['serum']       0.92      1.00      0.96        12\n",
-      "          Acne Treatment ['sunscreen']       1.00      0.67      0.80         3\n",
-      "              Acne Treatment ['toner']       0.90      1.00      0.95         9\n",
-      "              Anti-Aging ['face wash']       1.00      1.00      1.00         7\n",
-      "            Anti-Aging ['moisturizer']       1.00      1.00      1.00        12\n",
-      "                  Anti-Aging ['serum']       1.00      1.00      1.00        49\n",
-      "              Anti-Aging ['sunscreen']       1.00      1.00      1.00        12\n",
-      "                  Anti-Aging ['toner']       1.00      1.00      1.00         8\n",
-      "             Brightening ['face wash']       1.00      1.00      1.00         2\n",
-      "           Brightening ['moisturizer']       1.00      1.00      1.00         3\n",
-      "                 Brightening ['serum']       1.00      0.75      0.86         4\n",
-      "             Brightening ['sunscreen']       1.00      1.00      1.00         2\n",
-      "                 Brightening ['toner']       1.00      1.00      1.00         1\n",
-      "  Hydrating/Moisturizing ['face wash']       0.89      1.00      0.94        16\n",
-      "Hydrating/Moisturizing ['moisturizer']       1.00      1.00      1.00        21\n",
-      "      Hydrating/Moisturizing ['serum']       1.00      0.93      0.96        14\n",
-      "  Hydrating/Moisturizing ['sunscreen']       1.00      0.92      0.96        13\n",
-      "      Hydrating/Moisturizing ['toner']       0.94      1.00      0.97        15\n",
-      "             Oil Control ['face wash']       1.00      1.00      1.00         1\n",
-      "                 Oil Control ['toner']       0.00      0.00      0.00         1\n",
-      "               Pore Care ['face wash']       0.00      0.00      0.00         1\n",
-      "               Pore Care ['sunscreen']       0.00      0.00      0.00         1\n",
-      "     Sensitive Skin Care ['face wash']       1.00      1.00      1.00         3\n",
-      "     Sensitive Skin Care ['sunscreen']       1.00      1.00      1.00         1\n",
-      "         Sensitive Skin Care ['toner']       1.00      1.00      1.00         6\n",
-      " Sunscreen/UV Protection ['sunscreen']       0.77      1.00      0.87        10\n",
+      "           0       0.68      0.42      0.52        40\n",
+      "           1       0.36      0.39      0.38        41\n",
+      "           2       0.57      0.70      0.63        79\n",
+      "           3       0.84      0.76      0.80        42\n",
+      "           4       0.38      0.38      0.38        40\n",
       "\n",
-      "                              accuracy                           0.97       242\n",
-      "                             macro avg       0.87      0.86      0.86       242\n",
-      "                          weighted avg       0.96      0.97      0.96       242\n",
+      "    accuracy                           0.56       242\n",
+      "   macro avg       0.57      0.53      0.54       242\n",
+      "weighted avg       0.57      0.56      0.56       242\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "c:\\Users\\LENOVO\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.svm import SVC\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
-    "# Load the original dataset\n",
-    "file_path = \"Dataset/processed_file.csv\"\n",
+    "# Load the new cleaned dataset\n",
+    "file_path = \"Dataset/processed_file.csv\"  # Update this path if needed\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# Categorize products based on notable effects and product type\n",
-    "def categorize_product(row):\n",
-    "    notable_effects = row['notable_effects']\n",
-    "    product_type = row['product_type']\n",
-    "    \n",
-    "    if 'hydrating' in notable_effects or 'moisturizing' in notable_effects:\n",
-    "        return 'Hydrating/Moisturizing ' + product_type\n",
-    "    elif 'acne-free' in notable_effects or 'acne-spot' in notable_effects:\n",
-    "        return 'Acne Treatment ' + product_type\n",
-    "    elif 'anti-aging' in notable_effects:\n",
-    "        return 'Anti-Aging ' + product_type\n",
-    "    elif 'brightening' in notable_effects or 'black-spot' in notable_effects:\n",
-    "        return 'Brightening ' + product_type\n",
-    "    elif 'oil-control' in notable_effects:\n",
-    "        return 'Oil Control ' + product_type\n",
-    "    elif 'pore-care' in notable_effects:\n",
-    "        return 'Pore Care ' + product_type\n",
-    "    elif 'skin-barrier' in notable_effects or 'soothing' in notable_effects:\n",
-    "        return 'Sensitive Skin Care ' + product_type\n",
-    "    elif 'uv-protection' in notable_effects:\n",
-    "        return 'Sunscreen/UV Protection ' + product_type\n",
-    "    else:\n",
-    "        return 'General ' + product_type\n",
+    "# Fill missing values only for numeric columns\n",
+    "numeric_cols = df.select_dtypes(include=['number']).columns\n",
+    "df[numeric_cols] = df[numeric_cols].fillna(df[numeric_cols].median())\n",
     "\n",
-    "# Apply categorization\n",
-    "df['product_category'] = df.apply(categorize_product, axis=1)\n",
+    "# Selecting relevant features (Ensure 'brand' exists)\n",
+    "if 'brand' not in df.columns:\n",
+    "    raise ValueError(\"Error: 'brand' column is missing in the dataset!\")\n",
     "\n",
-    "# Save categorized data\n",
-    "df.to_csv(\"Dataset/categorized_skincare_data.csv\", index=False)\n",
+    "X = df[['brand']].copy()\n",
     "\n",
-    "# Select features and target\n",
-    "features = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal',  # Skin types\n",
-    "            'product_type_face wash', 'product_type_moisturizer', 'product_type_serum', 'product_type_sunscreen', 'product_type_toner',  # Product types\n",
-    "            'notable_effects_acne-free', 'notable_effects_acne-spot', 'notable_effects_anti-aging', 'notable_effects_balancing',\n",
-    "            'notable_effects_black-spot', 'notable_effects_brightening', 'notable_effects_hydrating', 'notable_effects_moisturizing',\n",
-    "            'notable_effects_no-whitecast', 'notable_effects_oil-control', 'notable_effects_pore-care', 'notable_effects_refreshing',\n",
-    "            'notable_effects_skin-barrier', 'notable_effects_soothing', 'notable_effects_uv-protection']  # Notable effects\n",
-    "\n",
-    "target = 'product_category'\n",
-    "\n",
-    "# Encode target variable\n",
+    "# Encoding categorical 'brand' column\n",
     "label_encoder = LabelEncoder()\n",
-    "df[target] = label_encoder.fit_transform(df[target])\n",
+    "X['brand'] = label_encoder.fit_transform(df['brand'])\n",
     "\n",
-    "# Splitting dataset into training and testing\n",
-    "X = df[features]\n",
-    "y = df[target]\n",
+    "# Identify binary encoded columns for notable effects and skin type\n",
+    "notable_effects_columns = [col for col in df.columns if col.startswith('notable_effects_')]\n",
+    "skin_type_columns = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal']\n",
+    "\n",
+    "# Ensure all required columns exist before selection\n",
+    "missing_columns = [col for col in notable_effects_columns + skin_type_columns if col not in df.columns]\n",
+    "if missing_columns:\n",
+    "    raise ValueError(f\"Error: The following columns are missing: {missing_columns}\")\n",
+    "\n",
+    "X[notable_effects_columns + skin_type_columns] = df[notable_effects_columns + skin_type_columns]\n",
+    "\n",
+    "# Standardize features (SVM works best with standardized data)\n",
+    "scaler = StandardScaler()\n",
+    "X = scaler.fit_transform(X)\n",
+    "\n",
+    "# Encoding product_type (Target Variable)\n",
+    "if 'product_type' not in df.columns:\n",
+    "    raise ValueError(\"Error: 'product_type' column is missing in the dataset!\")\n",
+    "\n",
+    "y = label_encoder.fit_transform(df['product_type'].astype(str))\n",
+    "\n",
+    "# Splitting dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Standardize features for better SVM performance\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "# Training Support Vector Machine (SVM) with hyperparameter tuning\n",
+    "param_grid = {'C': [0.1, 1, 10], 'kernel': ['linear', 'rbf', 'poly']}\n",
+    "grid_search = GridSearchCV(SVC(), param_grid, cv=5, scoring='accuracy', n_jobs=-1)\n",
+    "grid_search.fit(X_train, y_train)\n",
     "\n",
-    "# Initialize and train SVM model\n",
-    "svm_model = SVC(kernel='rbf', C=1.0, gamma='scale')  # RBF Kernel\n",
-    "svm_model.fit(X_train, y_train)\n",
+    "# Get best parameters from GridSearchCV\n",
+    "best_params = grid_search.best_params_\n",
+    "print(f\"✅ Best Parameters Found: {best_params}\")\n",
     "\n",
-    "# Predictions\n",
-    "y_pred = svm_model.predict(X_test)\n",
+    "# Train final SVM model with best parameters\n",
+    "svm_classifier = SVC(**best_params)\n",
+    "svm_classifier.fit(X_train, y_train)\n",
     "\n",
-    "# Evaluate model\n",
+    "# Making predictions on test set\n",
+    "y_pred = svm_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "# Get unique class labels from y_test\n",
-    "unique_labels = sorted(set(y_test) | set(y_pred))\n",
-    "\n",
-    "# Generate classification report only for present labels\n",
-    "report = classification_report(y_test, y_pred, labels=unique_labels, target_names=[label_encoder.classes_[i] for i in unique_labels])\n",
-    "\n",
-    "print(f\"Accuracy: {accuracy:.2f}\")\n",
-    "print(\"Classification Report:\")\n",
-    "print(report)\n",
-    "\n"
+    "print(f'🎯 SVM Model Accuracy: {accuracy:.2f}')\n",
+    "print(classification_report(y_test, y_pred))\n"
    ]
   }
  ],
