--- a/cleaned_dataset_code.ipynb
+++ b/cleaned_dataset_code.ipynb
@@ -55,6 +55,32 @@
     "\n",
     "print(f\"✅ Cleaned dataset saved as '{cleaned_file_path}'!\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "second clean "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv(\"Dataset/cleaned_dataset00.csv\")\n",
+    "\n",
+    "# Create new merged column\n",
+    "df[\"notable_effects_hydrating\"] = df[[\"notable_effects_hydrating\", \"notable_effects_moisturizing\"]].max(axis=1)\n",
+    "\n",
+    "\n",
+    "# Save the cleaned dataset\n",
+    "df.to_csv(\"Dataset/cleaned_dataset03.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
