--- a/RFd.ipynb
+++ b/RFd.ipynb
@@ -71,6 +71,224 @@
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Accuracy: 0.60\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.76      0.55      0.64        40\n",
+      "           1       0.47      0.44      0.46        41\n",
+      "           2       0.58      0.63      0.61        79\n",
+      "           3       0.85      0.83      0.84        42\n",
+      "           4       0.44      0.53      0.48        40\n",
+      "\n",
+      "    accuracy                           0.60       242\n",
+      "   macro avg       0.62      0.60      0.60       242\n",
+      "weighted avg       0.62      0.60      0.61       242\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "# Load dataset\n",
+    "file_path = \"Dataset/processed_file.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Selecting relevant features\n",
+    "X = df[['brand']].copy()\n",
+    "\n",
+    "# Encoding categorical variables\n",
+    "X = pd.get_dummies(X, columns=['brand'])\n",
+    "\n",
+    "# Adding binary encoded columns for notable effects and skin type\n",
+    "notable_effects_columns = [col for col in df.columns if col.startswith('notable_effects_')]\n",
+    "skin_type_columns = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal']\n",
+    "X[notable_effects_columns + skin_type_columns] = df[notable_effects_columns + skin_type_columns]\n",
+    "\n",
+    "# Scaling numerical features using MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Extracting product type labels\n",
+    "product_type_columns = [col for col in df.columns if col.startswith('product_type_')]\n",
+    "y = df[product_type_columns].values.argmax(axis=1)  # Convert one-hot encoding to single labels\n",
+    "\n",
+    "# Splitting dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Training XGBoost Classifier\n",
+    "xgb_classifier = XGBClassifier(n_estimators=100, learning_rate=0.1, random_state=42)\n",
+    "xgb_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Making predictions\n",
+    "y_pred = xgb_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'XGBoost Accuracy: {accuracy:.2f}')\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Accuracy: 0.60\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.72      0.45      0.55        40\n",
+      "           1       0.46      0.41      0.44        41\n",
+      "           2       0.59      0.73      0.65        79\n",
+      "           3       0.85      0.81      0.83        42\n",
+      "           4       0.46      0.47      0.47        40\n",
+      "\n",
+      "    accuracy                           0.60       242\n",
+      "   macro avg       0.62      0.58      0.59       242\n",
+      "weighted avg       0.61      0.60      0.60       242\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Load dataset\n",
+    "file_path = \"Dataset/processed_file.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Selecting relevant features\n",
+    "X = df[['brand']].copy()\n",
+    "\n",
+    "# Encoding categorical variables\n",
+    "X = pd.get_dummies(X, columns=['brand'])\n",
+    "\n",
+    "# Adding binary encoded columns for notable effects and skin type\n",
+    "notable_effects_columns = [col for col in df.columns if col.startswith('notable_effects_')]\n",
+    "skin_type_columns = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal']\n",
+    "X[notable_effects_columns + skin_type_columns] = df[notable_effects_columns + skin_type_columns]\n",
+    "\n",
+    "# Scaling numerical features using MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Extracting product type labels\n",
+    "product_type_columns = [col for col in df.columns if col.startswith('product_type_')]\n",
+    "y = df[product_type_columns].values.argmax(axis=1)  # Convert one-hot encoding to single labels\n",
+    "\n",
+    "# Splitting dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Training SVM Classifier\n",
+    "svm_classifier = SVC(kernel='rbf', C=1.0, gamma='scale', random_state=42)  # Try 'linear' or 'poly' for different results\n",
+    "svm_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Making predictions\n",
+    "y_pred = svm_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'SVM Accuracy: {accuracy:.2f}')\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.58\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.61      0.47      0.54        40\n",
+      "           1       0.41      0.41      0.41        41\n",
+      "           2       0.63      0.66      0.65        79\n",
+      "           3       0.90      0.83      0.86        42\n",
+      "           4       0.37      0.45      0.40        40\n",
+      "\n",
+      "    accuracy                           0.58       242\n",
+      "   macro avg       0.59      0.57      0.57       242\n",
+      "weighted avg       0.60      0.58      0.59       242\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load dataset\n",
+    "file_path = \"Dataset/processed_file.csv\"\n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Selecting relevant features\n",
+    "X = df[['brand']].copy()\n",
+    "\n",
+    "# Encoding categorical variables\n",
+    "X = pd.get_dummies(X, columns=['brand'])\n",
+    "\n",
+    "# Adding binary encoded columns for notable effects and skin type\n",
+    "notable_effects_columns = [col for col in df.columns if col.startswith('notable_effects_')]\n",
+    "skin_type_columns = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal']\n",
+    "X[notable_effects_columns + skin_type_columns] = df[notable_effects_columns + skin_type_columns]\n",
+    "\n",
+    "# Scaling numerical features using MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Encoding product_type\n",
+    "y = LabelEncoder().fit_transform(df['product_type'].astype(str))\n",
+    "\n",
+    "# Splitting dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Training Random Forest Classifier\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Making predictions\n",
+    "y_pred = rf_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Random Forest Accuracy: {accuracy:.2f}')\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
