--- a/CatBoost.ipynb
+++ b/CatBoost.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 0.4834711\ttest: 0.4876033\tbest: 0.4876033 (0)\ttotal: 8.85ms\tremaining: 17.7s\n",
+      "0:\tlearn: 0.4834711\ttest: 0.4876033\tbest: 0.4876033 (0)\ttotal: 182ms\tremaining: 6m 4s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
       "bestTest = 0.6074380165\n",
