--- a/RFd.ipynb
+++ b/RFd.ipynb
@@ -289,6 +289,37 @@
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Comparision\n",
+    "\n",
+    " Both CatBoost and SVM algorithms performed similarly on the dataset, with CatBoost achieving a slightly better accuracy of 61% compared to SVM's 60%. \n",
+    "\n",
+    "\n",
+    " #### Classification Report Analysis\n",
+    "\n",
+    " | Class Label | CatBoost Precision | SVM Precision | CatBoost Recall | SVM Recall | Key Observation |\n",
+    "|------------|-------------------|-------------|--------------|------------|----------------|\n",
+    "| **0** | 0.71 | 0.72 | 0.50 | 0.45 | CatBoost has better recall, meaning it captures more relevant samples. |\n",
+    "| **1** | 0.45 | 0.46 | 0.37 | 0.41 | Both models struggle to classify this category accurately. |\n",
+    "| **2** | 0.61 | 0.59 | 0.76 | 0.73 | CatBoost shows slightly better precision and recall; meaning it captures more actual positives across classes. |\n",
+    "| **3** | 0.85 | 0.85 | 0.79 | 0.81 | Both models perform equally well for this category. |\n",
+    "| **4** | 0.44 | 0.46 | 0.47 | 0.47 | Very similar performance, showing a challenge in classifying this category. |\n",
+    "\n",
+    "##  Which Model Performed Best?  \n",
+    "\n",
+    "After comparing **CatBoost** and **SVM**, we **chose CatBoost** as the better model because:  \n",
+    "\n",
+    "### ✅ **Why CatBoost Wins?**  \n",
+    "✔ **Higher accuracy** – CatBoost achieved **61%**, slightly outperforming SVM (60%).  \n",
+    "✔ **Better recall** – It identified more correct cases in most classes, making it more reliable.  \n",
+    "✔ **Handles categorical data efficiently** – CatBoost processes categorical variables **natively**, unlike SVM, which requires extra encoding.  \n",
+    "✔ **Prevents overfitting** – Built-in **early stopping** ensures it stops training when performance stops improving.  \n",
+    "  \n"
+   ]
   }
  ],
  "metadata": {
