Added CatBoost explanation and justification

--- a/RFd.ipynb
+++ b/RFd.ipynb
@@ -245,13 +245,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -413,6 +406,32 @@
     "print(classification_report(y_test, y_pred))\n",
     "\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CatBoost Classifier\n",
+    "CatBoost (Categorical Boosting) is a high performance gradient boosting algorithm developed by Yandex. It is designed to handle categorical features efficiently without requiring extensive preprocessing, making it ideal for classification tasks with structured data. Unlike traditional gradient boosting models, CatBoost utilizes an advanced technique called ordered boosting to prevent overfitting and enhance generalization, making it a powerful choice for recommendation systems.\n",
+    "\n",
+    "### Justification\n",
+    "We chose to implement CatBoost for the following reasons:\n",
+    "\n",
+    "1. Optimized Handling of Categorical Data\n",
+    "The Glowlytic recommendation system relies heavily on categorical attributes such as brand, product type, skin type, and notable effects. CatBoost natively supports categorical features without requiring extensive preprocessing like one-hot encoding, preserving data structure and improving efficiency.\n",
+    "\n",
+    "2. Superior Performance on Imbalanced Data\n",
+    "Many real world datasets, including ours, exhibit class imbalances where some product types may be more common than others. CatBoost incorporates ordered boosting and feature combinations, reducing overfitting and improving accuracy, even when dealing with underrepresented product categories.\n",
+    "\n",
+    "3. Efficiency and Faster Training Compared to Other Boosting Models\n",
+    "Unlike traditional boosting algorithms (such as XGBoost or LightGBM), CatBoost is optimized for speed and can handle large datasets efficiently. It reduces training time without compromising accuracy by implementing symmetric trees and advanced loss functions, making it an ideal choice for our recommendation system.\n",
+    "\n",
+    "4. Robust Generalization and High Accuracy\n",
+    "The Glowlytic system needs a model that performs well across different user queries while maintaining high accuracy in predicting the best product recommendations. CatBoost reduces the risk of overfitting while ensuring the model generalizes well to unseen data, making it a reliable choice for providing consistent recommendations.\n",
+    "\n",
+    "By leveraging CatBoost, our system can efficiently process large scale categorical data, improve classification accuracy, and provide more personalized and precise product recommendations to users based on their skin type, brand preferences, and desired product effects.\n",
     "\n"
    ]
   },
