--- a/Glowlytic Notebook.ipynb
+++ b/Glowlytic Notebook.ipynb
@@ -18,7 +18,7 @@
       },
       "source": [
         "## The Goal of the dataset\n",
-        "As the market for skincare treatments and products continues to grow and become increasingly overwhelming, we came up with the idea to develop **Glowlytic**. The **Glowlytic** Skincare Product Recommendation System is designed to make finding the right skincare product easier and more enjoyable. With so many options on the market, it can be overwhelming to figure out which products are the best fit for your skin. **Glowlytic** solves this by using machine learning and a thoughtfully curated dataset to deliver recommendations that are clear, accurate, and tailored specifically to your needs. Whether you're dealing with acne, dryness, or wrinkles, **Glowlytic** gives you the confidence to make informed decisions by providing detailed information about each product—its name, price, brand, and how it can help with your specific skin concerns.\n",
+        "As the market for skincare treatments and products continues to grow and become increasingly overwhelming, we came up with the idea to develop **Glowlytic**. The **Glowlytic** Skincare Product Recommendation System is designed to make finding the right skincare product easier and more enjoyable. With so many options on the market, it can be overwhelming to figure out which product type is the best fit for your skin. **Glowlytic** solves this by using machine learning and a thoughtfully curated dataset to deliver recommendations that are clear, accurate, and tailored specifically to your needs. Whether you're dealing with acne, dryness, or wrinkles, **Glowlytic** gives you the confidence to make informed decisions by providing detailed information about each product type, price, brand, and how it can help with your specific skin concerns.\n",
         "\n",
         "At its core, **Glowlytic** is powered by a bourd dataset created to understand skincare products in detail. This dataset captures essential information about each product, like which skin types it works best for (e.g., oily, dry, combination, or sensitive), its key benefits (e.g., moisturizing, anti-aging, acne care), and its price range. This makes it possible for **Glowlytic** to provide recommendations that are not only relevant but also perfectly aligned with what you’re looking for, saving you time and helping you find the perfect product effortlessly.\n",
         "<br><br>\n",
@@ -27,19 +27,18 @@
         "\n",
         "\n",
         "\n",
-        "*   The user should be able to provide product type wanted (eg. Moisturizer, Serum, Toner).\n",
         "*  The user should be able to provide his/her skin issues, such as acne, dryness, wrinkles, or hyperpigmentation.\n",
         "*  The user should be able to provide their skin type, whether it's oily, dry, combination, or sensitive.\n",
-        "*   The user should be able to specify a preferred price range, such as budget-friendly, mid-range, or luxury.\n",
+        "*  The user should be able to specify a preferred brand they trust.\n",
+        "*  The user should be able to specify a preferred price range, such as budget-friendly, mid-range, or luxury.\n",
         "\n",
         "\n",
         "<hr>\n",
         "\n",
-        "*   The system should be able to recommend a product name.\n",
+        "*   The system should be able to recommend a product type (eg. Moisturizer, Serum, Toner..).\n",
         "*   The system should be able to describe how the product will address the user's specific skin concerns.\n",
         "*   The system should be able to display the price of the recommended product.\n",
         "*   The system should be able to display a photo of the product, if available.\n",
-        "*   The system should be able to provide product URL link, if available.\n",
         "\n",
         "\n",
         "<br><br>"
