--- a/SupervisedModels.ipynb
+++ b/SupervisedModels.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "1.\tThe Glowlytic recommendation system takes into consideration multiple attributes, including skin type, product type, brand, and notable effects. Also, SVM’s ability to work well in high-dimensional spaces makes sure that all these factors are taken into account for accurate recommendations.\n",
     "\n",
-    "2.\tSince our system relies on a curated datasets and a massive amount of data, SVM makes an ideal choice. It promises high accuracy even with a smaller dataset, and outperforms other models that need extensive training data to be effective.\n",
+    "2.\tSince our system relies on a curated datasets, instaed of massive amount of data, SVM makes an ideal choice. It promises high accuracy even with a smaller dataset, and outperforms other models that need extensive training data to be effective.\n",
     "\n",
     "3.\tUnlike models that may struggle with new inputs, SVM has balance by having clear decision boundaries. This makes it have less tendency to overfit  and ensures that recommendations remain the same across different users.\n"
    ]
